--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <img src="your-photo.jpg" alt="Ваше фото" class="photo">
         <h1>Привет, я Ира</h1>
         <p>QA engineer</p>
+        <p>Рада знакомству</p>
         <div class="contact">
             <p>Email: <a href="irinanickiticheva@yande.ru">irinanickiticheva@yandex.ru</a></p>
             <p>Телефон: <a href="tel:+79613052525">+79613052525</a></p>
